Fixed overflow-x on filters

--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,9 @@
     
     /* ====== FONT AND TYPOGRAPHY ====== */
     --body-font: 'Poppins', sans-serif;
-    --biggest-font-size: 2rem;
-    --normal-font-size: .938rem;
-    --small-font-size: .813rem;
+    --biggest-font: 2rem;
+    --normal-font: 1rem;
+    --small-font: .87rem;
 
     /* ====== SPACING ====== */
     --mb-1: .5rem;
@@ -98,6 +98,7 @@ section {
     margin-left: var(--mb-1);
 
     text-align: center;
+    font-size: 1.3rem;
     letter-spacing: 1.1px;
 }
 
@@ -117,6 +118,7 @@ section {
 .nav-item {
     cursor: pointer;
     font-weight: 600;
+    font-size: var(--normal-font-size);
 }
 
 /* Represents the nav link underline */
@@ -219,6 +221,7 @@ section {
  
     align-self: center;
     justify-self: center;
+    font-size: var(--biggest-font);
 }
 
 /* ====== ABOUT ====== */
@@ -230,7 +233,7 @@ section {
 }
 
 .title::before {
-    content: '----- ';
+    content: '---';
     width: 50px;
     height: 2px;
     position: relative;
@@ -238,7 +241,7 @@ section {
 }
 
 .title::after {
-    content: ' -----';
+    content: '---';
     width: 50px;
     height: 2px;
     position: relative;
@@ -306,6 +309,7 @@ section {
     margin-bottom: var(--mb-1);
 
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
 }
 
